--- a/src/modules/demo1/CMakeLists.txt
+++ b/src/modules/demo1/CMakeLists.txt
@@ -1,8 +1,12 @@
+project(vtapi.demo1)
 
-add_library(vtmodule_demo1 SHARED demo1.cpp)
+add_library(vtmodule_demo1 SHARED
+    demo1.cpp
+)
 
 target_link_libraries(vtmodule_demo1
     vtapi
+    ${OpenCV_LIBRARIES}
 )
 
 target_include_directories(vtmodule_demo1 PRIVATE
