--- a/src/modules/demo2/CMakeLists.txt
+++ b/src/modules/demo2/CMakeLists.txt
@@ -1,8 +1,12 @@
+project(vtapi.demo2)
 
-add_library(vtmodule_demo2 SHARED demo2.cpp)
+add_library(vtmodule_demo2 SHARED
+    demo2.cpp
+)
 
 target_link_libraries(vtmodule_demo2
     vtapi
+    ${OpenCV_LIBRARIES}
 )
 
 target_include_directories(vtmodule_demo2 PRIVATE
