--- a/src/modules/demo1/CMakeLists.txt
+++ b/src/modules/demo1/CMakeLists.txt
@@ -4,9 +4,17 @@ add_library(vtmodule_demo1 SHARED
     demo1.cpp
 )
 
+set_target_properties(vtmodule_demo1 PROPERTIES
+    VERSION ${VTAPI_VERSION}
+    SOVERSION ${VTAPI_SOVERSION}
+    INSTALL_RPATH "${VTAPI_LIBRARY_PATH};${VTAPI_CURRENT_PATH};/usr/lib;/usr/local/lib"
+    INSTALL_RPATH_USE_LINK_PATH TRUE
+    BUILD_WITH_INSTALL_RPATH TRUE
+)
+
 target_link_libraries(vtmodule_demo1
     vtapi
-    ${OpenCV_LIBRARIES}
+    ${OPENCV_LIBS}
 )
 
 target_include_directories(vtmodule_demo1 PRIVATE
