splitted log for info messages and queries

--- a/vtapi_example.conf
+++ b/vtapi_example.conf
@@ -42,5 +42,8 @@ log_errors
 # Log warning messages (uncomment to enable)
 #log_warnings
 
-# Log verbose debugging information (uncomment to enable)
-#log_debug
+# Log info messages (uncomment to enable)
+#log_messages
+
+# Log all SQL queryes - very verbose (uncomment to enable)
+#log_queries
