opravy cmake: defaultní cesta do proměnné, přidána cesta pro x64

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,8 @@ endif()
 if (NOT VTAPI_MODULES_DIR)
   set(VTAPI_MODULES_DIR lib CACHE FILEPATH "Default module libraries path is \"${CMAKE_INSTALL_PREFIX}/lib\"")
 endif ()
-
+set(DEFAULT_INCLUDE_PATH "/usr/include /usr/local/include")
+set(DEFAULT_LIBRARY_PATH "/usr/lib /usr/local/lib /usr/lib/x86_64-linux-gnu /usr/local/lib/x86_64-linux-gnu")
 
 # global g++ flags
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -DBOOST_DATE_TIME_NO_LIB")
@@ -55,15 +56,15 @@ if (POCO_LIBRARY_PATH)
   set(POCOXML_LIBRARY_PATH ${POCOXML_LIBRARY_PATH} ${POCO_LIBRARY_PATH} CACHE FILEPATH "Poco XML library path")
 endif ()
 
-find_file(TEST_POCOFOUNDATION_INCLUDE_PATH Poco/Foundation.h ${POCO_INCLUDE_PATH} ${POCOFOUNDATION_INCLUDE_PATH} /usr/local/include)
-find_file(TEST_POCOUTIL_INCLUDE_PATH Poco/Util/Util.h ${POCO_INCLUDE_PATH} ${POCOUTIL_INCLUDE_PATH} /usr/local/include)
-find_file(TEST_POCOJSON_INCLUDE_PATH Poco/JSON/JSON.h ${POCO_INCLUDE_PATH} ${POCOJSON_INCLUDE_PATH} /usr/local/include)
-find_file(TEST_POCOXML_INCLUDE_PATH Poco/XML/XML.h ${POCO_INCLUDE_PATH} ${POCOXML_INCLUDE_PATH} /usr/local/include)
+find_file(TEST_POCOFOUNDATION_INCLUDE_PATH Poco/Foundation.h ${POCO_INCLUDE_PATH} ${POCOFOUNDATION_INCLUDE_PATH} ${DEFAULT_INCLUDE_PATH})
+find_file(TEST_POCOUTIL_INCLUDE_PATH Poco/Util/Util.h ${POCO_INCLUDE_PATH} ${POCOUTIL_INCLUDE_PATH} ${DEFAULT_INCLUDE_PATH})
+find_file(TEST_POCOJSON_INCLUDE_PATH Poco/JSON/JSON.h ${POCO_INCLUDE_PATH} ${POCOJSON_INCLUDE_PATH} ${DEFAULT_INCLUDE_PATH})
+find_file(TEST_POCOXML_INCLUDE_PATH Poco/XML/XML.h ${POCO_INCLUDE_PATH} ${POCOXML_INCLUDE_PATH} ${DEFAULT_INCLUDE_PATH})
 
-find_library(POCOFOUNDATION_LIBS PocoFoundation ${POCO_LIBRARY_PATH} ${POCOFOUNDATION_LIBRARY_PATH} /usr/local/lib)
-find_library(POCOUTIL_LIBS PocoUtil ${POCO_LIBRARY_PATH} ${POCOUTIL_LIBRARY_PATH} /usr/local/lib)
-find_library(POCOJSON_LIBS PocoJSON ${POCO_LIBRARY_PATH} ${POCOJSON_LIBRARY_PATH} /usr/local/lib)
-find_library(POCOXML_LIBS PocoXML ${POCO_LIBRARY_PATH} ${POCOXML_LIBRARY_PATH} /usr/local/lib)
+find_library(POCOFOUNDATION_LIBS PocoFoundation ${POCO_LIBRARY_PATH} ${POCOFOUNDATION_LIBRARY_PATH} ${DEFAULT_LIBRARY_PATH})
+find_library(POCOUTIL_LIBS PocoUtil ${POCO_LIBRARY_PATH} ${POCOUTIL_LIBRARY_PATH} ${DEFAULT_LIBRARY_PATH})
+find_library(POCOJSON_LIBS PocoJSON ${POCO_LIBRARY_PATH} ${POCOJSON_LIBRARY_PATH} ${DEFAULT_LIBRARY_PATH})
+find_library(POCOXML_LIBS PocoXML ${POCO_LIBRARY_PATH} ${POCOXML_LIBRARY_PATH} ${DEFAULT_LIBRARY_PATH})
 
 if (NOT TEST_POCOFOUNDATION_INCLUDE_PATH)
   message(SEND_ERROR "Poco Foundation include path error. Please, use one of -DPOCO_PATH=<root path to Poco>, -DPOCO_INCLUDE_PATH=<path> or -DPOCOFOUNDATION_INCLUDE_PATH=<path> variable.")
