--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,7 +122,11 @@ if (OPENCV_PC_PATH)
     message(SEND_ERROR "OpenCV file for pkg-config could not be found at location \"${OPENCV_PC_PATH}\". Please, check the path and try it again.")
   endif ()
 else ()
-  find_package(OpenCV 2.4.2 REQUIRED PATHS ${OPENCV_PATH})
+  # TODO Remake to find_package(OpenCV REQUIRED) ONLY + version checks
+  find_package(OpenCV REQUIRED PATHS ${OPENCV_PATH})
+  if (OpenCV_VERSION VERSION_LESS 2.4.2)
+    message(SEND_ERROR "OpenCV version >= 2.4.2 is required.")
+  endif ()
   if (OpenCV_FOUND)
     set(OPENCV_INCLUDE_PATH ${OpenCV_INCLUDE_DIRS})
     set(OPENCV_LIBS ${OpenCV_LIBS})
