Divided pg libdir / pkglibdir to avoid unresolved symbol on libvtapi_postgresql.so

--- a/src/backends/postgresql/CMakeLists.txt
+++ b/src/backends/postgresql/CMakeLists.txt
@@ -28,13 +28,18 @@ execute_process(COMMAND ${PG_CONFIG_PATH} --pkgincludedir
   OUTPUT_STRIP_TRAILING_WHITESPACE
 )
 
-execute_process(COMMAND ${PG_CONFIG_PATH} --pkglibdir --libdir
+execute_process(COMMAND ${PG_CONFIG_PATH} --libdir
   OUTPUT_VARIABLE POSTGRES_LIBRARY_PATH
   OUTPUT_STRIP_TRAILING_WHITESPACE
 )
 
-find_library(POSTGRES_LIBS pq ${POSTGRES_LIBRARY_PATH})
-find_library(PQTYPES_LIBS pqtypes ${LIBPQTYPES_LIBRARY_PATH} ${POSTGRES_LIBRARY_PATH})
+execute_process(COMMAND ${PG_CONFIG_PATH} --pkglibdir
+  OUTPUT_VARIABLE POSTGRES_PKGLIBRARY_PATH
+  OUTPUT_STRIP_TRAILING_WHITESPACE
+)
+
+find_library(POSTGRES_LIBS pq ${POSTGRES_LIBRARY_PATH} ${POSTGRES_PKGLIBRARY_PATH})
+find_library(PQTYPES_LIBS pqtypes ${LIBPQTYPES_LIBRARY_PATH} ${POSTGRES_LIBRARY_PATH} ${POSTGRES_PKGLIBRARY_PATH})
 
 file(GLOB ${PROJECT_NAME}.Headers *.h)
 file(GLOB ${PROJECT_NAME}.Sources *.cpp)
