--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+/src/vtserver/vtserver_interface.pb.cc
+/src/vtserver/vtserver_interface.pb.h
+/src/vtserver/vtserver_interface.proto
+/src/vtserver/vtserver_interface.rpcz.cc
+/src/vtserver/vtserver_interface.rpcz.h
 /backup
 /build
 /doc
