--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,45 +1,20 @@
 cmake_minimum_required(VERSION 2.8)
 
-project(vtapi.vtapi)
+# VTApi library
+add_subdirectory(vtapi)
 
-file(GLOB ${PROJECT_NAME}.Sources *.cpp)
-file(GLOB_RECURSE ${PROJECT_NAME}.Headers ../include/*.h)
+# SQLite and PostgreSQL backends
+add_subdirectory(vtapi_backends)
 
-set(VTAPI_LIBRARY_PATH ${CMAKE_INSTALL_PREFIX}/lib CACHE FILEPATH "Install path of VTAPI library")
-set(VTAPI_CURRENT_PATH ${CMAKE_CURRENT_LIST_DIR} CACHE FILEPATH "Built path of VTAPI library")
+# example VTApi modules
+add_subdirectory(vtapi_modules)
 
-add_library(vtapi SHARED
-  ${${PROJECT_NAME}.Sources}
-  ${${PROJECT_NAME}.Headers}
-)
+# VTCLi command line tool
+add_subdirectory(vtcli)
 
-set_target_properties(vtapi PROPERTIES
-  VERSION ${VTAPI_VERSION}
-  SOVERSION ${VTAPI_SOVERSION}
-  INSTALL_RPATH_USE_LINK_PATH TRUE
-  BUILD_WITH_INSTALL_RPATH TRUE
-)
+# VTModule module loader
+add_subdirectory(vtmodule)
 
-target_link_libraries(vtapi
-  ${POCOFOUNDATION_LIBS}
-  ${POCOUTIL_LIBS}
-  ${OPENCV_LIBS}
-)
+# VTServer service
+add_subdirectory(vtserver)
 
-target_include_directories(vtapi PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
-  $<INSTALL_INTERFACE:include>
-  ${OPENCV_INCLUDE_PATH}
-  ${POCOFOUNDATION_INCLUDE_PATH}
-  ${POCOUTIL_INCLUDE_PATH}
-  ${DEFAULT_INCLUDE_PATH}
-)
-
-install(TARGETS vtapi
-  RUNTIME DESTINATION bin
-  LIBRARY DESTINATION lib
-)
-
-install(DIRECTORY ../include/
-  DESTINATION include
-)
