debug config file fix

--- a/vtapi_debug.conf
+++ b/vtapi_debug.conf
@@ -15,6 +15,9 @@
 # Main location of your datasets
 datasets_dir=~/videos
 
+# Folder containing compiled VTApi module binaries
+modules_dir=~/vtapi/install/lib/modules
+
 # Connection string to database
 connection=postgresql://vojca@localhost:5432/vidte2
 
@@ -27,8 +30,7 @@ logfile=~/vtapi.log
 
 ############## OTHER VALUES ##############
 
-# Folder containing your VTApi module binaries
-modules_dir=./install/lib/modules
+
 
 # Log error messages (uncomment to enable)
 log_errors
