--- a/src/vtapi/CMakeLists.txt
+++ b/src/vtapi/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
-
 project(vtapi.vtapi)
+
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DVTAPI_DEBUG")
 
 file(GLOB ${PROJECT_NAME}.Sources *.cpp)
 file(GLOB_RECURSE ${PROJECT_NAME}.Headers ../../include/*.h)
@@ -16,8 +17,6 @@ add_library(vtapi SHARED
 set_target_properties(vtapi PROPERTIES
   VERSION ${VTAPI_VERSION}
   SOVERSION ${VTAPI_SOVERSION}
-  INSTALL_RPATH_USE_LINK_PATH TRUE
-  BUILD_WITH_INSTALL_RPATH TRUE
 )
 if (OPENCV_LIBDIR)
   set_target_properties(vtapi PROPERTIES
@@ -33,16 +32,15 @@ target_link_libraries(vtapi
 
 target_include_directories(vtapi PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../../include>
-  $<INSTALL_INTERFACE:include>
+)
+target_include_directories(vtapi PRIVATE
   ${OPENCV_INCLUDE_PATH}
   ${POCOFOUNDATION_INCLUDE_PATH}
   ${POCOUTIL_INCLUDE_PATH}
-  ${DEFAULT_INCLUDE_PATH}
 )
 
 
 install(TARGETS vtapi
-  RUNTIME DESTINATION bin
   LIBRARY DESTINATION lib
 )
 
