--- a/src/vtmodule/CMakeLists.txt
+++ b/src/vtmodule/CMakeLists.txt
@@ -1,10 +1,12 @@
+cmake_minimum_required(VERSION 2.8)
+project(vtapi.vtmodule)
+
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DVTMODULE_DEBUG")
 
 add_executable(vtmodule vtmodule.cpp)
 
 set_target_properties(vtmodule PROPERTIES
-  INSTALL_RPATH "${VTAPI_LIBRARY_PATH};${VTAPI_CURRENT_PATH};/usr/lib;/usr/local/lib"
-    INSTALL_RPATH_USE_LINK_PATH TRUE
-    BUILD_WITH_INSTALL_RPATH TRUE
+  INSTALL_RPATH ${VTAPI_LIBRARY_PATH}
 )
 
 target_link_libraries(vtmodule
@@ -19,5 +21,4 @@ target_include_directories(vtmodule PRIVATE
 
 install(TARGETS vtmodule
     RUNTIME DESTINATION bin
-    LIBRARY DESTINATION lib
 )
