--- a/src/vtserver/CMakeLists.txt
+++ b/src/vtserver/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required (VERSION 2.8)
 project (vtapi.vtserver)
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -DBOOST_DATE_TIME_NO_LIB")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DVTSERVER_DEBUG")
 
 set(DEFAULT_LIBRARY_PATH /usr/lib /usr/local/lib /usr/lib/x86_64-linux-gnu /usr/local/lib/x86_64-linux-gnu /lib64 /lib)
 find_library(rpcz_LIBRARY rpcz ${DEFAULT_LIBRARY_PATH})
@@ -9,23 +11,16 @@ find_library(protobuf_LIBRARY protobuf ${DEFAULT_LIBRARY_PATH})
 find_library(boost_system_LIBRARY boost_system ${DEFAULT_LIBRARY_PATH})
 find_library(boost_thread_LIBRARY boost_thread ${DEFAULT_LIBRARY_PATH})
 find_library(boost_program_options_LIBRARY boost_program_options ${DEFAULT_LIBRARY_PATH})
-
-# global g++ flags
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DVTSERVER_DEBUG")
-
-
+find_library(vtapi ${VTAPI_LIBRARY_PATH})
 
 file(GLOB ${PROJECT_NAME}.Sources *.cpp *.cc *.h)
 
 add_executable(vtserver
     ${${PROJECT_NAME}.Sources})
 
-if (OPENCV_LIBDIR)
-  set_target_properties(vtserver PROPERTIES
-    INSTALL_RPATH ${OPENCV_LIBDIR}
+set_target_properties(vtserver PROPERTIES
+  INSTALL_RPATH ${VTAPI_LIBRARY_PATH}
 )
-endif()
 
 target_link_libraries(vtserver
     vtapi
@@ -36,13 +31,12 @@ target_link_libraries(vtserver
     ${boost_thread_LIBRARY}
     ${boost_program_options_LIBRARY}
     ${POCOFOUNDATION_LIBS}
-    ${OPENCV_LIBS}
     -pthread
 )
 
-target_include_directories(vtserver PUBLIC
+target_include_directories(vtserver PRIVATE
     $<TARGET_PROPERTY:vtapi,INTERFACE_INCLUDE_DIRECTORIES>
-    ${OPENCV_INCLUDE_PATH}
+    ${POCOFOUNDATION_INCLUDE_PATH}
 )
 
 install(TARGETS vtserver
