Default include path included in all cmakes

--- a/src/vtapi/CMakeLists.txt
+++ b/src/vtapi/CMakeLists.txt
@@ -36,6 +36,7 @@ target_include_directories(${PROJECT_NAME} BEFORE PUBLIC
 target_include_directories(${PROJECT_NAME} BEFORE PRIVATE
   ${POCOFOUNDATION_INCLUDE_PATH}
   ${POCOUTIL_INCLUDE_PATH}
+  ${DEFAULT_INCLUDE_PATH}
 )
 
 
