--- a/src/vtapi_backends/postgresql/CMakeLists.txt
+++ b/src/vtapi_backends/postgresql/CMakeLists.txt
@@ -64,6 +64,7 @@ target_include_directories(${PROJECT_NAME} BEFORE PRIVATE
     $<TARGET_PROPERTY:vtapi,INTERFACE_INCLUDE_DIRECTORIES>
     ${LIBPQTYPES_INCLUDE_PATH}
     ${POSTGRES_INCLUDE_PATH}
+    ${DEFAULT_INCLUDE_PATH}
 )
 
 install(TARGETS ${PROJECT_NAME}
