--- a/src/vtcli/CMakeLists.txt
+++ b/src/vtcli/CMakeLists.txt
@@ -15,6 +15,7 @@ target_link_libraries(${PROJECT_NAME}
 
 target_include_directories(${PROJECT_NAME} BEFORE PRIVATE
     $<TARGET_PROPERTY:vtapi,INTERFACE_INCLUDE_DIRECTORIES>
+    ${DEFAULT_INCLUDE_PATH}
 )
 
 install(TARGETS ${PROJECT_NAME}
