vtapi_debug.conf unpropriated

--- a/vtapi_debug.conf
+++ b/vtapi_debug.conf
@@ -13,13 +13,13 @@
 ############## CONFIGURE THIS ##############
 
 # Main location of your datasets
-datasets_dir=~/videos
+datasets_dir=~/cevu-test/datasets
 
 # Folder containing compiled VTApi module binaries
 modules_dir=~/vtapi/install/lib/modules
 
 # Connection string to database
-connection=postgresql://vojca@localhost:5432/vidte2
+connection=postgresql://vidte@localhost:5432/vidte
 
 # Default dataset (optional)
 dataset=demo
